tests/kulezi_tests/bad/unknown_return_type.lat
int main() {
    return 0;
}

class A {
    B f() {
        return new B;
    }
}